<?xml version="1.0"?>
<package format="3">
  <name>cartesian_impedance_controller</name>
  <version>1.1.1</version>
  <description>
    A Cartesian Impedance controller implementation
  </description>
  <maintainer email="c225tang@uwaterloo.ca">Cheng Tang</maintainer>
  <license>BSD-3-Clause</license>

  <author>Matthias Mayr</author>
  <author>Oussama Chouman</author>
  <author>Julian Salt Ducaju</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>tinyxml2</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>eigen3_cmake_module</test_depend>
</package>
